2007-11-09 Braden McDaniel  <braden@endoframe.com>

	Avoid including <mozilla-config.h>.  This file resides outside the
	paths specified in the pkg-config metadata.

	* mozilla-plugin/configure.ac: Set MOZ_X11 based on the value of
	no_x (as set by AC_PATH_X).  Removed mozincludedir substitution.
	* mozilla-plugin/src/Makefile.am (AM_CPPFLAGS): Removed
	-I$(mozincludedir).
	* mozilla-plugin/src/openvrml.cpp: Removed inclusion of
	<mozilla-config.h>.

2007-11-04 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Made GRE_PATH precious.

2007-11-04 Braden McDaniel  <braden@endoframe.com>

	* configure.ac: Get GRE_PATH from JS_LIBS rather than from
	pkg-config output.  This is resilient to providing JS_LIBS at
	configure time in situations where pkg-config metadata may
	unavaiable or otherwise nonfunctional.

2007-10-25 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(uri::swap(uri &)): Swapping std::string invalidates iterators;
	see 21.3,5 in the C++ spec.  Copy the iterator offsets to
	temporary variables in order to recreate them.  This fixes a
	failure with Release builds using the Microsoft compiler.

2007-10-25 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/browser.cpp
	(openvrml::scene::get_resource(const std::vector<std::string> &)
	const): Catch invalid_url exception.

2007-10-22 Braden McDaniel  <braden@endoframe.com>

	* src/libopenvrml/openvrml/node.cpp: Doc-comment fixes.

2007-10-19 Braden McDaniel  <braden@endoframe.com>

	Moved parse test input to persistent files (instead of files
	generated by the test machinery).

	* tests/Makefile.am (EXTRA_DIST): Add test files to the
	distribution.
	* tests/testsuite.at: Refer to the test files rather than using
	AT_DATA.
	* tests/vrml97/bad/proto-eventin-conflict.wrl
	* tests/vrml97/bad/proto-eventout-conflict.wrl
	* tests/vrml97/bad/unrecognized-node.wrl
	* tests/vrml97/bad/use-def-in-different-proto-default-value.wrl