@@ -1,7 +1,7 @@
 AM_CPPFLAGS = \
         -DGTK_DISABLE_DEPRECATED \
         -DOPENVRML_LIBEXECDIR_=\"$(libexecdir)\"
-AM_CXXFLAGS = @MOZILLA_PLUGIN_CFLAGS@ @GTK_CFLAGS@
+AM_CXXFLAGS = $(MOZILLA_PLUGIN_CFLAGS) $(GTK_CFLAGS)
 
 mozpluginsdir = $(libdir)/mozilla/plugins
 
@@ -12,7 +12,6 @@ endif
 openvrml_la_SOURCES = openvrml.cpp
 openvrml_la_LDFLAGS = \
         -module -avoid-version \
-        -R@mozlibdir@ \
-        @MOZILLA_PLUGIN_LIBS@
+        $(MOZILLA_PLUGIN_LIBS)
 
 EXTRA_DIST = $(openvrml_la_SOURCES)
